[package]
name = "gpa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive"] }
eframe = "0.19.0"
egui = "0.19.0"
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
term_grid = "0.2.0"
